# LLM_RAGs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  init.sh  pyproject.toml  requirements.txt
datasets/multimodal_rag/: question.txt
install/: check_prereqs.sh  post_install.sh  setup_poetry.sh
src/Agentic_AI/: multimodal_rag_test.py  run_multimodal_rag.py  run_multimodal_rag_advanced.py
src/Agentic_AI/configs/: run_multimodal_rag.yaml
src/Agentic_AI/modules/: multimodal_model.py  multimodal_model_advanced.py  multimodal_model_langgraph.py
src/Common_modules/: initialize.py  losses.py  prompts.py  tokens_helpers.py  utils.py
src/Eval_models/: run_eval.py
src/Eval_models/modules/: claim_verification.py  evaluation.py  few_shots.py  llm_judge.py  model_related.py
src/LLMs_training/: gpt_tests.py  gpt_train.py  gpt_train_finetune_instructions.py  gpt_train_scratch_or_finetune_classification.py  test.py
src/LLMs_training/configs/: gpt_train.yaml  gpt_train_finetune_instructions.yaml  gpt_train_scratch_or_finetune_classification.yaml
src/LLMs_training/modules/: collate_functions.py  datasets.py  models.py  plots.py  weights.py
src/RAGs/: chroma_ingest.py  rag_chroma.py  rag_gpt4_website.py  rag_unstrcutured_pdf.py
src/RAGs/configs/: chroma_ingest.yaml  rag_chroma.yaml  rag_unstructured.yaml  rag_website.yaml
src/RAGs/modules/: initialize.py
src/common_modules/: initialize.py  losses.py  prompts.py  utils.py
src/eval_models/: run_eval.py
src/eval_models/configs/: llm_gen_eval.yaml
src/eval_models/modules/: evaluation.py
src/hydra/: run.py
src/hydra/configs/module_1/: sub_config.yaml
src/hydra/modules/: core.py
src/omid_llm/: chroma_ingest.py  main.py  populate_databse.py  rag_chroma.py  rag_gpt4_website.py  rag_unstrcutured_pdf.py
src/omid_llm/configs/: chroma_ingest.yaml  rag_chroma.yaml  rag_unstructured.yaml  rag_website.yaml  run_config.yaml
src/omid_llm/modules/: initialize.py
