[project]
name = "omid_llm"
version = "0.1.0"
description = "First version of the installer"
authors = [
    {name = "omidh.usa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "unstructured[pdf] (>=0.18.21,<0.19.0)",
    "faiss-cpu",
    "chromadb (>=1.3.7,<2.0.0)"
]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "<2"
httpx = "^0.27"

# ✅ LangChain 1.x (ALL compatible)
langchain = "^1.0.0"
langchain-core = "^1.2.2"
langchain-community = "^0.3.31"
langchain-openai = "^1.1.6"
langchain-huggingface = "^1.2.0"
langchain-text-splitters = "^1.1.0"

load-dotenv = "^0.1.0"
bs4 = ">=0.0.2,<0.0.3"

huggingface-hub = ">=0.34.0,<1.0"
sentence-transformers = "^2.7"

torch = ">=2.0.0,<2.3.0"
torchvision = "^0.17.2"

pyyaml = "^6.0.1"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
pandas = "^2.2.1"



#[tool.poetry.scripts]
#omid-llm = "RAGs.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


